--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
   provider: ^4.3.2
+  http: ^0.12.2
+  shared_preferences: '>=0.5.12+4 <2.0.0'
 
 dev_dependencies:
   flutter_test:
